controller and model fixes
