# backend/swaggerDoc.yaml
@@ -191,9 +191,21 @@ components:
           minLength: 4
           maxLength: 300
           pattern: ^[A-Za-z0-9\s.,!?'"&()-]+$
-        image:
+        images:
+          type: array
+          items:
+            type: object
+            properties:
+              url:
+                type: string
+                format: uri
+              cloudinaryId:
+                type: string
+        incident:
           type: string
-          default: ""
+          format: objectId
+        type: string
+          format: objectId
         createdAt:
           type: string
           format: date-time
